<resources>
    <string name="app_name">Food Portion Printer</string>
    <string name="Save">Save</string>
    <string name="Total_measurement">Total measurement</string>
    <string name="Servings">Servings</string>
    <string name="Unit">Unit</string>
    <string name="Comment">Comment</string>
    <string name="Info_text">\n\nEnter the information and press the print button on top.</string>
    <string name="Portion_Information">Portion Information</string>
    <string name="Portion_Size">Portion Size</string>
    <string name="defaultIP" translatable="false">192.168.29.124:9100</string>
    <string name="Print">Print</string>
    <string name="Name">Dish</string>
    <string name="Date">Date:</string>
    <string name="error_valid_number">Please enter a valid number</string>
    <string name="error_positive_number">Please enter a valid positive number</string>
    <string name="print_success">Print job sent successfully</string>
    <string name="print_failed">Failed to connect to printer</string>
</resources>
